# ret

./: .gitignore  CONTRIBUTING.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: python-check.yml  python-publish.yml
ret/: __init__.py  __main__.py  cmd_opts.py
tests/: test_ret.py
