[tool.poetry]
name = "ret"
version = "0.1.0"
description = "A pure-python regex tool for the command-line"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.extras]
regex = ["regex"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
pylint = "^2.6.0"
isort = "^5.6.4"
black = "^20.8b1"
flake8 = "^3.8.4"
bandit = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
